# spaxy_oneAPI

./: CMakeLists.txt  README.md  spaxy.cpp
